[추가] 주간·월간·시간별 데이터 서버 조회 API와 응답 DTO 추가